--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     <div class="protocolo-container">
       <div class="protocolo-img"></div>
       <img src="imagenes/protocolocovid.png" height="50%" width="50%" alt="">
-    </div>
+    </div> </section>
     </div>
   </div>
-  </section>
+  
 
 <section>
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
