--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </nav>
 
   <!-- SECCIÓN PRINCIPAL -->
-  <div class="container mt-4">
+  <div class="container">
     <div class="row">
       <div class="col-sm">
         <h2 class="titulo">¿Por qué elegirnos?</h2>
@@ -68,7 +68,9 @@
 
   <!-- PROTOCOLO COVID -->
   <section class="protocolocovid text-center mt-4">
-    <img src="imagenes/protocolocovid.png" class="img-fluid" alt="Protocolo COVID">
+  <div class="protocolo-container">
+      <div class="protocolo-img"></div>
+    <img src="imagenes/protocolocovid.png" class="img-fluid" alt="Protocolo COVID"></div>
   </section>
 
   <!-- CAROUSEL -->
