--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
 
   <!-- PROTOCOLO COVID -->
   <section class="protocolocovid text-center mt-4">
-  <div class="protocolo-container">
       <div class="protocolo-img"></div>
-    <img src="imagenes/protocolocovid.png" class="img-fluid" alt="Protocolo COVID"></div>
+    <img src="imagenes/protocolocovid.png" class="img-fluid" alt="Protocolo COVID">
   </section>
 
   <!-- CAROUSEL -->
