--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
   <!-- PROTOCOLO COVID -->
   <section class="protocolocovid text-center mt-4">
-      <div class="protocolo-img"></div>
-    <img src="imagenes/protocolocovid.png" class="img-fluid" alt="Protocolo COVID">
+      <div class="protocolo-container"> 
+    <img src="imagenes/protocolocovid.png" class="img-fluid" alt="Protocolo COVID"></div>
   </section>
 
   <!-- CAROUSEL -->
