--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
   </div>
 
   <!-- PROTOCOLO COVID -->
-  <section class="protocolocovid text-center mt-4">
-      <div class="protocolo-container"> 
-    <img src="imagenes/protocolocovid.png" class="img-fluid" alt="Protocolo COVID"></div>
+  <section class="protocolo-container text-center mt-4">
+    <img src="imagenes/protocolocovid.png" class="img-fluid" alt="Protocolo COVID">
   </section>
 
   <!-- CAROUSEL -->
