--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
 
   <!-- PROTOCOLO COVID -->
-  <section class="protocolo-container text-center mt-4">
+  <section class="protocolocovid text-center mt-4">
     <img src="imagenes/protocolocovid.png" class="img-fluid" alt="Protocolo COVID">
   </section>
 
