--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
       </div>
     </div>
   </section>
+  
+  
+      <section>
+      <div class="servicios-listcontainer">
+      <p class="font">Odontologia General</p>
+      <p class="font" >Ortodoncia</p>
+      <p class="font">Implantologia</p>
+      <p class="font">Blanqueamiento Dental</p>
+      <p class="font">Odontopediatria</p>
+      <p class="font">Cirugia Dental </p>
+    </div></section>
 
   <!-- PROMOCIONES -->
   <section class="bottom mt-5">
