--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Clinica Dental Euro Dent</title>
+  <title>Agate Dental Clinic</title>
 
-  <meta name="description" content="Somos una Clínica Dental ubicada en la comuna de Providencia a pasos del Metro Los Leones. Nos especializamos en Cirugía Bucal, Implantología, Odontopediatría y Odontología Integral. Hacemos tu presupuesto de ortodoncia sin costo alguno. No creerás cómo lucirá tu sonrisa después de apenas una sesión de blanqueamiento. Contamos con dentistas de primer nivel dispuestos a mejorar tu sonrisa.">
-
-  <meta name="keywords" content="Clinica Dental, Odontologia Integral, Limpieza, Blanqueamiento, Providencia, Presupuesto Ortodoncia Gratuito">
+  <meta name="description" content = "Agate Dental Clinic located in Chinnamushidiwada, Visakhapatnam">
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -32,12 +30,12 @@
   <!-- NAV -->
   <nav class="menu">
     <ul class="nav nav-pills nav-fill">
-      <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
-      <li class="nav-item"><a class="nav-link" href="quienessomos.html">Quiénes somos</a></li>
-      <li class="nav-item"><a class="nav-link" href="especialidades.html">Especialidades</a></li>
-      <li class="nav-item"><a class="nav-link" href="faq.html">Preguntas Frecuentes</a></li>
-      <li class="nav-item"><a class="nav-link" href="galeria.html">Galería</a></li>
-      <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+      <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+      <li class="nav-item"><a class="nav-link" href="quienessomos.html">Who we are</a></li>
+      <li class="nav-item"><a class="nav-link" href="especialidades.html">specialties</a></li>
+      <li class="nav-item"><a class="nav-link" href="faq.html">Frequently Asked Questions</a></li>
+      <li class="nav-item"><a class="nav-link" href="galeria.html">Gallery</a></li>
+      <li class="nav-item"><a class="nav-link" href="contacto.html">Contact</a></li>
     </ul>
   </nav>
 
@@ -45,19 +43,13 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <h2 class="titulo">¿Por qué elegirnos?</h2>
-        <p class="font">
-          En Clínica Dental Euro Dent contamos con profesionales 
-          <em>altamente capacitados</em> para entregar la mejor atención.
-        </p>
+        <h2 class="titulo">Why choose us?</h2>
+        <p class="font">At Agate Multispeciality Dental & Implant Clinic, we have <em>highly trained</em> professionals to provide our patients with the best care, because we know how important your smile is to you.</p>
       </div>
 
       <div class="col-sm">
-        <h3 class="titulo">Queremos hacer de tu sonrisa tu mejor atributo</h3>
-        <p class="font">
-          Contamos con equipamientos de primer nivel, cómodas salas de espera,
-          wifi, aire acondicionado y un área lounge para tu comodidad.
-        </p>
+        <h3 class="titulo">We want to make your smile your best feature</h3>
+        <p class="font">Our clinic, in addition to having a privileged location, has top-level equipment and supplies, comfortable waiting rooms, Wi-Fi internet connection, air conditioning, and a lounge area for you to relax if you wish.</p>
       </div>
 
       <div class="col-sm">
@@ -104,7 +96,7 @@
 
   <!-- SERVICIOS -->
   <section class="bottom text-center mt-5">
-    <h3 class="titulo">Nuestros Servicios</h3>
+    <h3 class="titulo">Our Services</h3>
 
     <div class="container">
       <div class="row">
@@ -121,17 +113,17 @@
   
       <section>
       <div class="servicios-listcontainer">
-      <p class="font">Odontologia General</p>
-      <p class="font" >Ortodoncia</p>
+      p class="font">General Dentistry</p>
+      <p class="font" >Orthodontics</p>
       <p class="font">Implantologia</p>
-      <p class="font">Blanqueamiento Dental</p>
-      <p class="font">Odontopediatria</p>
-      <p class="font">Cirugia Dental </p>
+      <p class="font">Teeth Whitening</p>
+      <p class="font">Pediatric Dentistry</p>
+      <p class="font">Dental Surgery</p>
     </div></section>
 
   <!-- PROMOCIONES -->
   <section class="bottom mt-5">
-    <h3 class="titulo text-center">Promociones</h3>
+    <h3 class="titulo text-center">Promotions</h3>
 
     <div class="container">
       <div class="row">
@@ -163,10 +155,7 @@
 
   <!-- FOOTER -->
   <footer class="text-center mt-5">
-    <p class="font">
-      Clínica Dental Euro Dent | Tel: 600 707 1010 |
-      Lunes a Viernes 8:30–21:00 | Sábados 9:00–14:00
-    </p>
+    <p class="font">Agate Multispeciality Dental & Implant Clinic | Phone +91 8143523340 | Opposite Sub Registar Office, Savitri Nagar, Chinamushidiwada, Visakhapatnam-531173, Andhra Pradesh.</p>
   </footer>
 
   <!-- Bootstrap JS -->
