Update header logo and fix HTML structure

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 
 <body>
 
-  <header class="text-center">
+  <header>
     <div class="logo">
-      <img src="imagenes/eurodentlogopng.png" alt="Clinica Dental Euro Dent" height="150" width="200">
-    </div>
+      <img src="imagenes/log1.png" alt="Agate Dental Clinic" height="250" width="400">
+    </div> <br>
+  <br>
+  <br>
   </header>
 
   <!-- NAV -->
