--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="col-sm">
-        <img src="imagenes/eurodent3.jpeg" class="img-fluid" alt="Consultorio Eurodent">
+        <img src="imagenes/agatechair.jpeg" class="img-fluid" alt="Consultorio Eurodent">
       </div>
     </div>
   </div>
