Update footer contact information in contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -129,9 +129,7 @@
   <br>
   <br>
   <footer>
-    <p class="font">
-      Clinica Dental Euro Dent | Telf 600 707 1010 | Atención de Lunes a Viernes 8:30 a 21:00 hrs. Sábados de 9:00 a
-      14:00 hrs.Sábados de 9:00 a 18:00 hrs.</p>
+    <p class="font">Agate Multispeciality Dental & Implant Clinic | Phone +91 8143523340 | Opposite Sub Registar Office, Savitri Nagar, Chinamushidiwada, Visakhapatnam-531173, Andhra Pradesh.</p>
   </footer>
   <!--Fin del fornmulario-->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
