--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
       <li class="nav-item"><a class="nav-link" href="quienessomos.html">Who we are</a></li>
       <li class="nav-item"><a class="nav-link" href="especialidades.html">specialties</a></li>
-      <li class="nav-item"><a class="nav-link" href="faq.html">Frequently Asked Questions</a></li>
+      <li class="nav-item"><a class="nav-link" href="faq.html">FAQ's</a></li>
       <li class="nav-item"><a class="nav-link" href="galeria.html">Gallery</a></li>
       <li class="nav-item"><a class="nav-link" href="contacto.html">Contact</a></li>
     </ul>
