--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <header>
     <div class="logo">
-      <img src="imagenes/log1.png" alt="Agate Dental Clinic" height="250" width="400">
+      <img src="imagenes/log1.png" alt="Agate Dental Clinic" height="150" width="200">
     </div> <br>
   <br>
   <br>
@@ -35,7 +35,7 @@
       <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
       <li class="nav-item"><a class="nav-link" href="quienessomos.html">Who we are</a></li>
       <li class="nav-item"><a class="nav-link" href="especialidades.html">specialties</a></li>
-      <li class="nav-item"><a class="nav-link" href="faq.html">FAQ's</a></li>
+      <li class="nav-item"><a class="nav-link" href="faq.html">Frequently Asked Questions</a></li>
       <li class="nav-item"><a class="nav-link" href="galeria.html">Gallery</a></li>
       <li class="nav-item"><a class="nav-link" href="contacto.html">Contact</a></li>
     </ul>
