--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <h3 class="titulo">Why choose us?</h3>
-        <p class="font">At Agate Multispeciality Dental & Implant Clinic, we have <em>highly trained</em> professionals to provide our patients with the best care, because we know how important your smile is to you.</p>
+        <h3 class="titulo">Why Choose us?</h3>
+        <p class="font">At Agate Multispeciality Dental & Implant Clinic, we have highly trained professionals to provide our patients with the best care, because we know how important your smile is to you.</p>
       </div>
 
       <div class="col-sm">
-        <h3 class="titulo">We want to make your smile your best feature</h3>
+        <h3 class="titulo">Make Your Smile Better</h3>
         <p class="font">Our clinic, in addition to having a privileged location, has top-level equipment and supplies, comfortable waiting rooms, Wi-Fi internet connection, air conditioning, and a lounge area for you to relax if you wish.</p>
       </div>
 
