--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
   <header>
     <div class="logo">
-      <img src="imagenes/agatelogo2b.png" alt="Agate Dental Clinic" height="150" width="200">
+      <img src="imagenes/agatelogo3b.png" alt="Agate Dental Clinic" height="150" width="200">
     </div> <br>
   <br>
   <br>
   </header>
 
-  <!-- NAV -->
+  <!-- NAV --> <div>
   <nav class="menu">
     <ul class="nav nav-pills nav-fill">
       <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
@@ -65,14 +65,16 @@
       <li class="nav-item"><a class="nav-link" href="galeria.html">Gallery</a></li>
       <li class="nav-item"><a class="nav-link" href="contacto.html">Contact</a></li>
     </ul>
-  </nav>
+  </nav></div>
+  
+ 
 
-
+ 
 
   <!-- SECCIÓN PRINCIPAL -->
   <div class="container">
   
-  <div class ="banner"><p> <b> Call us 📞 +91 8143523340 | Follow us on 📘 Facebook: @bndfg | Follow us on 📸 Instagram: @fdgfdg </b></p></div>
+  <div class ="banner"><p> <b> Call us 📞 +91 8143523340 | Write us at ✉ agate@gmail.com | Follow us on 📸 Instagram: @fdgfdg </b></p></div>
   
     <div class="row">
       <div class="col-sm">
@@ -139,7 +141,7 @@
         <div class="col-sm"><img src="imagenes/blanqueamientodental (2).jpg" class="img-fluid" alt="Blanqueamiento"></div>
         <div class="col-sm"><img src="imagenes/odontopediatria (2).jpg" class="img-fluid" alt="Odontopediatría"></div>
         <div class="col-sm"><img src="imagenes/cirugiabucal (2).png" class="img-fluid" alt="Cirugía Bucal"></div>
-		<div class="col-sm"><img src="imagenes/cirugiabucal (2).png" class="img-fluid" alt="Cirugía Bucal"></div>
+		<div class="col-sm"><img src="imagenes/rootcanal.jpeg" class="img-fluid" alt="Cirugía Bucal"></div>
       </div>
     </div>
   </section>
